force-app/main/default/objects/SFDC_520_Quote__c/SFDC_520_Quote__c.object-meta.xml
<CustomObject>
    <description>Simple Quote object which holds dates and line items, many quotes may be related to a single opportunity, a quote may have many detail lines.</description>
    <label>Quote</label>
    <nameField>
        <displayFormat>Q-{00000}</displayFormat>
        <label>Quote Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quotes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>