force-app/main/default/objects/SFDC_520_Quote__c/fields/Template_Name__c.field-meta.xml
<CustomField>
    <fullName>Template_Name__c</fullName>
    <description>Used to identify the template that is being used as the basis for a cloned actual quote.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Template Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>