force-app/main/default/objects/SFDC_520_Quote__c/listViews/AllQuotes.listView-meta.xml
<ListView>
    <fullName>AllQuotes</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Quote_Amount__c</columns>
    <columns>Approval_Stage__c</columns>
    <columns>Presented_Date__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Quotes</label>
</ListView>