force-app/main/default/objects/SFDC_520_Quote__c/listViews/ApprovedQuotes.listView-meta.xml
<ListView>
    <fullName>ApprovedQuotes</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Presented_Date__c</columns>
    <columns>Quote_Amount__c</columns>
    <columns>Valid_Until__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Approval_Stage__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <label>Approved Quotes</label>
</ListView>