force-app/main/default/objects/SFDC_520_Quote__c/listViews/PresentedtoCustomerrecently.listView-meta.xml
<ListView>
    <fullName>PresentedtoCustomerrecently</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Presented_Date__c</columns>
    <columns>Quote_Amount__c</columns>
    <columns>Valid_Until__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Presented_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>THIS_MONTH,LAST_MONTH</value>
    </filters>
    <label>Presented to Customer recently</label>
</ListView>