force-app/main/default/objects/SFDC_520_Quote__c/listViews/RejectedQuotes.listView-meta.xml
<ListView>
    <fullName>RejectedQuotes</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Quote_Amount__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Approval_Stage__c</field>
        <operation>equals</operation>
        <value>Denied</value>
    </filters>
    <label>Rejected Quotes</label>
</ListView>