force-app/main/default/objects/SFDC_520_Quote__c/listViews/TDaylightMPEAddlProperty.listView-meta.xml
<ListView>
    <fullName>TDaylightMPEAddlProperty</fullName>
    <booleanFilter>1 or 2 or 3</booleanFilter>
    <columns>NAME</columns>
    <columns>Template_Name__c</columns>
    <columns>Opportunity__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>Quote_Amount__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>Q-00240,Q-00239,Q-00237,Q-00238,Q-00236,Q-00250,Q-00249,Q-00247,Q-00248</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>Q-00246,Q-00255,Q-00254,Q-00252,Q-00253,Q-00251,Q-00245,Q-00244,Q-00242</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>Q-00243,Q-00241</value>
    </filters>
    <label>T-Daylight MPE Add&apos;l Property</label>
    <sharedTo>
        <group>Operations</group>
    </sharedTo>
</ListView>