force-app/main/default/objects/SFDC_520_Quote__c/listViews/TDaylightMPEAddlProperty2007.listView-meta.xml
<ListView>
    <fullName>TDaylightMPEAddlProperty2007</fullName>
    <booleanFilter>1 or 2</booleanFilter>
    <columns>NAME</columns>
    <columns>Template_Name__c</columns>
    <columns>Opportunity__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>Q-01042,Q-01041,Q-01039,Q-01040,Q-01038,Q-01052,Q-01051,Q-01049,Q-01050,Q-01048</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>Q-01057,Q-01056,Q-01054,Q-01055,Q-01053,Q-01047,Q-01046,Q-01044,Q-01045,Q-01043</value>
    </filters>
    <label>T-Daylight MPE Add&apos;l Property - 2007</label>
</ListView>