force-app/main/default/objects/SFDC_520_Quote__c/listViews/TDaylightMPENewInstall2007.listView-meta.xml
<ListView>
    <fullName>TDaylightMPENewInstall2007</fullName>
    <booleanFilter>1 or 2</booleanFilter>
    <columns>NAME</columns>
    <columns>Template_Name__c</columns>
    <columns>Opportunity__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>Quote_Amount__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>,Q-01022,Q-01021,Q-01019,Q-01020,Q-01018,Q-01032,Q-01031,Q-01029,Q-01030,Q-01028</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>,Q-01037,Q-01036,Q-01034,Q-01035,Q-01033,Q-01027,Q-01026,Q-01024,Q-01025,Q-01023</value>
    </filters>
    <label>T-Daylight MPE New Install - 2007</label>
</ListView>