force-app/main/default/objects/SFDC_520_Quote__c/listViews/TDaylightSPENewInstall.listView-meta.xml
<ListView>
    <fullName>TDaylightSPENewInstall</fullName>
    <booleanFilter>1 or 2 or 3</booleanFilter>
    <columns>NAME</columns>
    <columns>Template_Name__c</columns>
    <columns>Opportunity__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>Quote_Amount__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>Q-00200,Q-00199,Q-00197,Q-00198,Q-00196,Q-00210,Q-00209,Q-00207,Q-00208</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>Q-00206,Q-00215,Q-00214,Q-00212,Q-00213,Q-00211,Q-00205,Q-00204,Q-00202</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>Q-00203,Q-00201</value>
    </filters>
    <label>T-Daylight SPE New Install</label>
    <sharedTo>
        <group>Operations</group>
    </sharedTo>
</ListView>