force-app/main/default/objects/SFDC_520_Quote__c/listViews/TDaylightSPENewInstall2007.listView-meta.xml
<ListView>
    <fullName>TDaylightSPENewInstall2007</fullName>
    <booleanFilter>1 or 2</booleanFilter>
    <columns>NAME</columns>
    <columns>Template_Name__c</columns>
    <columns>Opportunity__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>Quote_Amount__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>,Q-01002,Q-01001,Q-00999,Q-01000,Q-00998,Q-01012,Q-01011,Q-01009,Q-01010,Q-01008</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>,Q-01017,Q-01016,Q-01014,Q-01015,Q-01013,Q-01007,Q-01006,Q-01004,Q-01005,Q-01003</value>
    </filters>
    <label>T-Daylight SPE New Install - 2007</label>
</ListView>