force-app/main/default/objects/SFDC_520_Quote__c/listViews/TDelphiNewInstall.listView-meta.xml
<ListView>
    <fullName>TDelphiNewInstall</fullName>
    <booleanFilter>1 or 2 or 3</booleanFilter>
    <columns>NAME</columns>
    <columns>Template_Name__c</columns>
    <columns>Opportunity__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>Quote_Amount__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>Q-00031,Q-00033,Q-00029,Q-00032,Q-00025,Q-00112,Q-00114,Q-00115,Q-00113</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>Q-00110,Q-00120,Q-00119,Q-00117,Q-00118,Q-00116,Q-00125,Q-00124</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>Q-00122,Q-00123,Q-00121,Q-00044,Q-00043,Q-00041,Q-00042,Q-00040</value>
    </filters>
    <label>T-Delphi New Install</label>
    <sharedTo>
        <group>Operations</group>
    </sharedTo>
</ListView>