force-app/main/default/objects/SFDC_520_Quote__c/listViews/TDelphiNewInstall2007.listView-meta.xml
<ListView>
    <fullName>TDelphiNewInstall2007</fullName>
    <booleanFilter>1 or 2 or 3</booleanFilter>
    <columns>NAME</columns>
    <columns>Template_Name__c</columns>
    <columns>Opportunity__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>Quote_Amount__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>,Q-00864,Q-00866,Q-00863,Q-00865,Q-01059,Q-00914,Q-00916,Q-00917,Q-00915,Q-00913</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>,Q-00922,Q-00921,Q-00919,Q-00920,Q-00918,Q-00927,Q-00926,Q-00924,Q-00925,Q-01058</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>,-00871,Q-00870,Q-00868,Q-00869,Q-00867</value>
    </filters>
    <label>T-Delphi New Install - 2007</label>
</ListView>