force-app/main/default/objects/SFDC_520_Quote__c/listViews/TDelphiSelectMPEAddProperty2007.listView-meta.xml
<ListView>
    <fullName>TDelphiSelectMPEAddProperty2007</fullName>
    <booleanFilter>1 or 2 or 3</booleanFilter>
    <columns>NAME</columns>
    <columns>Template_Name__c</columns>
    <columns>Opportunity__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>Quote_Amount__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>,Q-00881,Q-00880,Q-00878,Q-00879,Q-00877,Q-00967,Q-00966,Q-00964,Q-00965,Q-00963</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>,Q-00977,Q-00976,Q-00974,Q-00975,Q-00973,Q-00982,Q-00981,Q-00979,Q-00980,Q-00978</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>,Q-00972,Q-00971,Q-00969,Q-00970,Q-00968</value>
    </filters>
    <label>T-Delphi Select MPE Add Property - 2007</label>
</ListView>