force-app/main/default/objects/SFDC_520_Quote__c/listViews/TDelphiSelectMPENewInstall.listView-meta.xml
<ListView>
    <fullName>TDelphiSelectMPENewInstall</fullName>
    <booleanFilter>1 or 2 or 3</booleanFilter>
    <columns>NAME</columns>
    <columns>Template_Name__c</columns>
    <columns>Opportunity__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>Quote_Amount__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>Q-00150,Q-00149,Q-00147,Q-00148,Q-00146,Q-00145,Q-00144,Q-00142,Q-00143</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>Q-00141,Q-00155,Q-00154,Q-00152,Q-00153,Q-00151,Q-00160,Q-00159,Q-00157</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>Q-00158,Q-00156,Q-00049,Q-00048,Q-00046,Q-00047,Q-00045</value>
    </filters>
    <label>T-Delphi Select MPE New Install</label>
    <sharedTo>
        <group>Operations</group>
    </sharedTo>
</ListView>